--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,7 +19,7 @@ html {
 }
 
 #navbar * {
-  width: 10%;
+  width: 10vw;
   text-align: center;
   padding: 1%;
   text-transform: uppercase;
@@ -51,6 +51,18 @@ html {
   &:hover {
     transition: 0.6s;
     box-shadow: 0 0 2px black;
+  }
+}
+
+@media (max-width: 500px) {
+  #navbar {
+    margin: auto 10%;
+  }
+  
+  #navbar * {
+    font-size:12px;
+    margin: 2%;
+    width: 50vw;
   }
 }
 
